# relatividad-general-2025

./: .gitignore  README.md
notebooks/: .gitignore  GR25-00-Introduccion_a_python.ipynb  GR25-01-Busqueda_de_datos.ipynb  GR25-01-Descubriendo_gw_data.ipynb  GR25-02-Introduccion_a_GWpy.ipynb  GR25_00-Introduccion_a_python.ipynb  GR25_00_introduccion_a_python.ipynb  README.md  pyproject.toml
problemas/: GR25-01-EjerciciosV1.tex  GR25-01-EjerciciosV2.tex  GR25-02-EjerciciosV1.tex
teoria/: GR25-00-IntroduccionV1.key  GR25-00-IntroduccionV2.key  GR25-00-IntroduccionV3.key  GR25-01-IntroRelatividadV1.key  GR25-02-TensoresV1.key
