[tool.poetry]
name = "gr25"
version = "0.1.0"
description = "General Relativity 2025 project with data analysis and visualization tools"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26"
matplotlib = "^3.8"
scikit-learn = "^1.3"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"